<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/search"
          android:title="@string/search"
          android:icon="@android:drawable/ic_menu_search"
          app:showAsAction="always"
          app:actionViewClass="android.widget.SearchView"/>

    <item android:id="@+id/filter"
          android:title="@string/filter"
          android:icon="@drawable/ic_filter"
          app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/name"
                  android:title="@string/name" />
            <item android:id="@+id/city"
                  android:title="@string/city" />
            <item android:id="@+id/state"
                  android:title="@string/state" />
            <item android:id="@+id/county"
                  android:title="@string/county" />
            <item android:id="@+id/none"
                  android:title="@string/none" />

        </menu>
    </item>

</menu>